--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "devcenter",
-  "version": "1.0.0",
+  "version": "0.0.1 pre",
   "author": "Spargat Team",
   "license": "SPARGAT",
   "description": "DevCenter",
