--- a/.env
+++ b/.env
@@ -1,4 +1,20 @@
 # Main configurations of DevCenter
+
+# Project configuration
+PROJECT_NAME = DevCenter
+PROJECT_LICENSE = Spargat
+PROJECT_AUTHOURS = SpargatTeam
+PROJECT_CREATORS = SpargatTeam
+PROJECT_COUNTRY = Romanian
+
+# Website Configurations
 WEB_PORT = 80 # port DevCenter running
 WEB_PUBLIC = 1 # 0 mean it isn't public, and 1 mean is public
-API_REGISTER = 1 # 0 mean it isn't enabled and new users can't be created, and 1 mean is enabled and new users can't be created
+WEB_LOGIN = 1 # 0 mean is not necessary to login for a few features, and 1 mean you need login to acces it
+WEB_DOMAIN = devcenter.spargat.ro # website name, we recomand set it like devcenter.(you're web domain), currently we don't have a web domain but we will buy an .ro domain later
+
+# Server configuration
+SERVER_NORMAL_TOOLS = 1 # 0 mean that user can't use normal features like git for clone a git or pip from python to install a depencies from the server if it is 0 it need to use Spargat DevCenter ones, and if is 1 these can be used
+
+# API Configuration
+API_REGISTER = 1 # 0 mean it isn't enabled and new users can't be created ( api + register router disabled ), and 1 mean is enabled and new users can be created
